made some more progress on the home page.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="global/images/logo.png" type="image/png">
     <title>SimpleTools | Home</title>
 
-    <meta name="description" content="SimpleTools - A collection of simple tools for developers.">
+    <meta name="description" content="SimpleTools - A collection of simple tools by Quntem.">
     <meta name="keywords" content="SimpleTools, tools, developer tools, web development, programming tools">
     <meta name="author" content="SimpleTools">
     <meta name="robots" content="index, follow">
@@ -23,8 +23,27 @@
 </head>
 <body>
     <div class="headContainer">
-        <img src="global/images/logo.png" alt="SimpleTools Logo" height="128" width="128">
-        <h1>SimpleTools</h1>
-        <h2>A collection of simple tools for developers made by Quntem.</h2>
+        <img src="global/images/logo.png" alt="SimpleTools Logo" height="88" width="88">
+        <div class="headContainer-title">
+            <h1>SimpleTools</h1>
+            <h2>Use a collection of simple tools by Quntem.</h2>
+        </div>
+    </div>
+    <div class="toolsContainer">
+        <div class="toolCard">
+            <h3>Pixel Art Scaler</h3>
+            <p>
+                Easily scale your pixel art to ensure it looks sharp and vibrant on social media platforms!
+                Upload your image, adjust the scale factor or dimensions, and preview the results instantly.
+            </p>
+        </div>
+        <div class="toolCard">
+            <h3>???</h3>
+            <p>Coming soon...</p>
+        </div>
+        <div class="toolCard">
+            <h3>???</h3>
+            <p>Coming soon...</p>
+        </div>
     </div>
 </body>
