Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
         </div>
     </div>
     <div class="toolsContainer">
+        <div class="toolsContainer-iconContainer-PAS">
+            <img src="pixel-art-scaler/pixel scaler icon.png" alt="Pixel Art Scaler Icon" class="toolsContainer-icon" height="48" width="48">
+            <h2 class="pas-font pas-title">Pixel Art Scaler</h2>
+        </div>
+
         <div class="toolCard">
-            <h3>Pixel Art Scaler</h3>
+            <img src="global/images/pixel art scaler preview.png" alt="Screenshot of the Pixel Art Scaler tool." width="520" height="auto" class="toolCard-image">
             <p>
                 Easily scale your pixel art to ensure it looks sharp and vibrant on social media platforms!
                 Upload your image, adjust the scale factor or dimensions, and preview the results instantly.
             </p>
-        </div>
-        <div class="toolCard">
-            <h3>???</h3>
-            <p>Coming soon...</p>
-        </div>
-        <div class="toolCard">
-            <h3>???</h3>
-            <p>Coming soon...</p>
+            <a href="pixel-art-scaler/index.html">
+                <button class="toolCard-button">Try it out</button>
+            </a>
         </div>
     </div>
 </body>
