--- a/pixel-art-scaler/index.html
+++ b/pixel-art-scaler/index.html
@@ -25,7 +25,7 @@
   <div class="container">
     <!-- Actual Stuff -->
     <div style="display: flex; flex-direction: row; gap: 1rem; margin-bottom: 1rem;">
-      <img src="pixel scaler icon.png" alt="Pixel Scaler Icon Logo" class="logo">
+      <img src="pixel scaler icon.png" alt="Pixel Scaler Icon Logo" class="logo" width="48" height="48">
       <h1>Pixel Art Scaler</h1>
     </div>
 
