Add header section and improve toolCard styles for better layout and responsiveness

--- a/pixel-art-scaler/index.html
+++ b/pixel-art-scaler/index.html
@@ -21,6 +21,18 @@
   <link rel="stylesheet" href="index.css">
 </head>
 
+<header>
+  <a href="/" style="text-decoration: none; color: inherit;">
+    <div class="headContainer">
+      <img src="/global/images/logo.png" alt="SimpleTools Logo" height="88" width="88">
+      <div class="headContainer-title">
+          <h1>SimpleTools</h1>
+          <h2>Use a collection of simple tools by Quntem.</h2>
+      </div>
+    </div>
+  </a>
+</header>
+
 <body>
   <div class="container">
     <!-- Actual Stuff -->
