--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
 
         <div class="toolCard">
-            <img src="global/images/pixel art scaler preview.png" alt="Screenshot of the Pixel Art Scaler tool." width="520" height="auto" class="toolCard-image">
+            <img src="global/images/pixel art scaler preview.png" alt="Screenshot of the Pixel Art Scaler tool." width="100%" height="auto" class="toolCard-image">
             <p>
                 Easily scale your pixel art to ensure it looks sharp and vibrant on social media platforms!
                 Upload your image, adjust the scale factor or dimensions, and preview the results instantly.
